<resources>
    <string name="app_name">Docklands Academy</string>
    <string name="usuario">Usuario:</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="contrase_aText">Contraseña</string>
    <string name="usuarioText">Usuario</string>
    <string name="docklandsbg">DocklandsBG</string>
    <string name="docklandslogo">DocklandsLogo</string>
    <string name="perfil">Perfil</string>
    <string name="informes">Informes</string>
    <string name="notas">Notas</string>
    <string name="facturas">Facturas</string>
    <string name="noticias">Noticias</string>
    <string name="materiales">Materiales</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="bienvenid">Bienvenid@,</string>
    <string name="leer_m_s"><u>Leer más</u></string>
</resources>