<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_item1"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_item2"
        android:icon="@drawable/baseline_sticky_note_2_24"
        android:title="@string/informes" />
    <item
        android:id="@+id/nav_item3"
        android:icon="@drawable/baseline_analytics_24"
        android:title="@string/notas" />
    <item
        android:id="@+id/nav_item4"
        android:icon="@drawable/baseline_receipt_long_24"
        android:title="@string/facturas" />
    <item
        android:id="@+id/nav_item5"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/noticias" />
    <item
        android:id="@+id/nav_item6"
        android:icon="@drawable/baseline_folder_shared_24"
        android:title="@string/materiales" />

</menu>