<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A133979">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar.Small.Title"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:elevation="50dp"
        android:indeterminateTint="#DE1B1B"
        android:progressTint="#133979"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/docklandslogo2_foreground" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:background="#EA2D2D"
        android:visibility="visible"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="50dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/usuario"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/design_button"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#133979"
            android:textColorHint="@color/white"
            android:textSize="34sp"
            android:visibility="visible"
            app:cornerRadius="50dp"
            app:strokeColor="#002E8A"
            app:strokeWidth="5dp" />

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/usuarioText"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:labelFor="@id/Usuario"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="190dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/contrase_aText"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:labelFor="@id/Contraseña"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/contrase_a"
            android:textColor="@color/white"
            android:textSize="34sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/darken"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#B3000000"
        android:backgroundTint="#000000"
        android:elevation="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>